Add option to hide BG images, optimizations
- added option to hide new background images on the panel, revert to simpler look
- change FightHistory & bulk panel.addFights param from ArrayList to ArrayDeque, this should be more efficient with the removeFirst / remove(0) we are using a lot. also standardized this removal pattern where ArrayDeque is used instead of using stream.removeIf()